creating tensors using multiple methods

--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -1,5 +1,31 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyMMf7TiXgPi8hO5FaUlCcVx",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/shafiqshams/practical-deep-learning-using-pytorch/blob/main/tensors_in_pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 2,
@@ -12,8 +38,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "2.8.0+cu126\n"
           ]
@@ -26,7 +52,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "if torch.cuda.is_available():\n",
+        "  print('GPU is available')\n",
+        "  print(f\"Using GPU: {torch.cuda.get_device_name(0)}\")\n",
+        "else:\n",
+        "  print('GPU is not available, using CPU.')"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -34,36 +66,321 @@
         "id": "5K58VrlCK7r8",
         "outputId": "4e485ae8-6124-46cf-c995-2ca9efbb6787"
       },
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "GPU is not available, using CPU.\n"
           ]
         }
-      ],
-      "source": [
-        "if torch.cuda.is_available():\n",
-        "  print('GPU is available')\n",
-        "  print(f\"Using GPU: {torch.cuda.get_device_name(0)}\")\n",
-        "else:\n",
-        "  print('GPU is not available, using CPU.')"
       ]
-    }
-  ],
-  "metadata": {
-    "colab": {
-      "provenance": []
     },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Creating a Tensor"
+      ],
+      "metadata": {
+        "id": "8z_Vuxv5NpPr"
+      }
     },
-    "language_info": {
-      "name": "python"
+    {
+      "cell_type": "code",
+      "source": [
+        "# add empty tensor with specific shape\n",
+        "# creating empty space in memory\n",
+        "a = torch.empty(2,3)\n",
+        "type(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CPxDrhKsNqig",
+        "outputId": "9e5e73fc-5ccf-4028-edb3-c8f02ef480ac"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Tensor"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using zeros\n",
+        "# mainly for initializing biases with 0\n",
+        "torch.zeros(2,3)"
+      ],
+      "metadata": {
+        "id": "5p2wN5-IN2ys",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "36b57010-2788-4a89-f306-b54f2e5600f0"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0.],\n",
+              "        [0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using ones\n",
+        "torch.ones(2,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MPZ9IsWgoy4W",
+        "outputId": "3ad32173-5199-4029-94c2-4cfda55ddae1"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1.],\n",
+              "        [1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using rand\n",
+        "# with random value initialization\n",
+        "torch.rand(2,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ceDKJyywo4sM",
+        "outputId": "2ac8b6d5-f810-46e1-f6e6-f2d8c544ceed"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.2651, 0.1342, 0.7328],\n",
+              "        [0.9514, 0.9987, 0.6869]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# manual_seed\n",
+        "# to get the same values and acheive reproducibility\n",
+        "torch.manual_seed(100)\n",
+        "torch.rand(2,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3Yxd1zxDpmIM",
+        "outputId": "19673ee8-7e93-4f2d-a2f2-af7081fd4d22"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.1117, 0.8158, 0.2626],\n",
+              "        [0.4839, 0.6765, 0.7539]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.tensor([[1,2,3], [4,5,6]])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UeaTsXv1qFmb",
+        "outputId": "8de8b9d4-2e9b-4b2c-f8ec-721c25dfab64"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3],\n",
+              "        [4, 5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using arange\n",
+        "torch.arange(0, 10, 2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OyfQJbxfqNEY",
+        "outputId": "ff6a2cfa-1a5c-4cd0-de43-7c4f4e944d97"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 2, 4, 6, 8])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using linspace\n",
+        "# linearly spaced: 0 - 10, 10 or 5 evenly spaced values\n",
+        "torch.linspace(0,10,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fpnTIJMOqgxp",
+        "outputId": "50eca222-8416-49c2-89db-27fc54271901"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0.0000,  2.5000,  5.0000,  7.5000, 10.0000])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using eye\n",
+        "# Identity matrix\n",
+        "torch.eye(5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I7jMmLJlqk-1",
+        "outputId": "cc4e497e-d008-463b-fc1d-e434d6bb4ba7"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 0., 0., 0., 0.],\n",
+              "        [0., 1., 0., 0., 0.],\n",
+              "        [0., 0., 1., 0., 0.],\n",
+              "        [0., 0., 0., 1., 0.],\n",
+              "        [0., 0., 0., 0., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using full\n",
+        "torch.full((2,3), 5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0WwRrOQrrZwB",
+        "outputId": "2ef882ab-94fc-40c0-fd05-d65b48e12c9c"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[5, 5, 5],\n",
+              "        [5, 5, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vT55uYfzrfR0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
