get the tensor shape and create new tensors of the same shape

--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMf7TiXgPi8hO5FaUlCcVx",
+      "authorship_tag": "ABX9TyMU3Ymjpzm4Y1EA/MkiOBFi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -374,12 +374,164 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Tensor Shapes"
+      ],
       "metadata": {
-        "id": "vT55uYfzrfR0"
+        "id": "5-WRqvxnwz8P"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = torch.tensor([[1,2,3], [4,5,6]])\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vT55uYfzrfR0",
+        "outputId": "780c0922-de72-46c5-981a-ad25153d4699"
       },
-      "execution_count": null,
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3],\n",
+              "        [4, 5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MvDIo0rcwtOU",
+        "outputId": "0b117a3d-4bd2-4f5f-d0d8-fb66a8ba6183"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# copy shape of a tensor\n",
+        "torch.empty_like(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XHkcYG6Mw6ML",
+        "outputId": "48a2bac8-34e8-4580-8c8e-756f0324c870"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[3616445622929465956, 6068092717591768373, 3473465217021260594],\n",
+              "        [6499037521336349742, 7309453675965983778, 8315168162784306286]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.zeros_like(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0B_NO6iNxiTq",
+        "outputId": "4a07c566-1a42-4691-b634-759613744ec0"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 0, 0],\n",
+              "        [0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.ones_like(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_fJS-b83xkzo",
+        "outputId": "445feda6-2d9d-41d8-9b8c-cab51d218ef6"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 1, 1],\n",
+              "        [1, 1, 1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# error: because the data type is not provided.\n",
+        "# rand creates values between 0 - 1 and our x is int64 datatype\n",
+        "# therefore error of mismatch datatype\n",
+        "# x.dtype\n",
+        "\n",
+        "# torch.rand_like(x)\n"
+      ],
+      "metadata": {
+        "id": "VlpN5ZwLxnfo"
+      },
+      "execution_count": 37,
       "outputs": []
     }
   ]
