add tensor data types

--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMU3Ymjpzm4Y1EA/MkiOBFi",
+      "authorship_tag": "ABX9TyN3CIh/5eAcE+iLub3LdKXv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -524,15 +524,172 @@
         "# error: because the data type is not provided.\n",
         "# rand creates values between 0 - 1 and our x is int64 datatype\n",
         "# therefore error of mismatch datatype\n",
-        "# x.dtype\n",
-        "\n",
-        "# torch.rand_like(x)\n"
+        "# fixed it using dtype param\n",
+        "torch.rand_like(x, dtype=torch.float32)\n"
       ],
       "metadata": {
-        "id": "VlpN5ZwLxnfo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VlpN5ZwLxnfo",
+        "outputId": "5d40e2f9-ee6d-4d27-f396-da3d5c474678"
       },
-      "execution_count": 37,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.2239, 0.3023, 0.1784],\n",
+              "        [0.8238, 0.5557, 0.9770]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Tensor Data types"
+      ],
+      "metadata": {
+        "id": "qwuP2QPiy2N0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# find data type\n",
+        "x.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zkFFK-zMy981",
+        "outputId": "dbcb8f35-c44b-4f0d-d52b-c4f722c23e24"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# assign data type when creating a tensor\n",
+        "torch.tensor([1.0, 2.0, 3.0], dtype=torch.int32)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2-gqJB_6y_M9",
+        "outputId": "92201dc2-9cfe-49d6-a3d2-c0629cad4f3c"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3], dtype=torch.int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.tensor([1.0, 2.0, 3.0], dtype=torch.float64)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oUTFEAz9zhv-",
+        "outputId": "09a609af-d72a-4363-e40b-4a921bf72c56"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1., 2., 3.], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# changing existing tensor data type\n",
+        "x.to(torch.float32)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CGkvRWilzmj6",
+        "outputId": "97d2772d-4b7d-458c-c51a-052d3052e6be"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 2., 3.],\n",
+              "        [4., 5., 6.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| **Data Type**             | **Dtype**         | **Description**                                                                                                                                                                |\n",
+        "|---------------------------|-------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+        "| **32-bit Floating Point** | `torch.float32`   | Standard floating-point type used for most deep learning tasks. Provides a balance between precision and memory usage.                                                         |\n",
+        "| **64-bit Floating Point** | `torch.float64`   | Double-precision floating point. Useful for high-precision numerical tasks but uses more memory.                                                                               |\n",
+        "| **16-bit Floating Point** | `torch.float16`   | Half-precision floating point. Commonly used in mixed-precision training to reduce memory and computational overhead on modern GPUs.                                            |\n",
+        "| **BFloat16**              | `torch.bfloat16`  | Brain floating-point format with reduced precision compared to `float16`. Used in mixed-precision training, especially on TPUs.                                                |\n",
+        "| **8-bit Floating Point**  | `torch.float8`    | Ultra-low-precision floating point. Used for experimental applications and extreme memory-constrained environments (less common).                                               |\n",
+        "| **8-bit Integer**         | `torch.int8`      | 8-bit signed integer. Used for quantized models to save memory and computation in inference.                                                                                   |\n",
+        "| **16-bit Integer**        | `torch.int16`     | 16-bit signed integer. Useful for special numerical tasks requiring intermediate precision.                                                                                    |\n",
+        "| **32-bit Integer**        | `torch.int32`     | Standard signed integer type. Commonly used for indexing and general-purpose numerical tasks.                                                                                  |\n",
+        "| **64-bit Integer**        | `torch.int64`     | Long integer type. Often used for large indexing arrays or for tasks involving large numbers.                                                                                  |\n",
+        "| **8-bit Unsigned Integer**| `torch.uint8`     | 8-bit unsigned integer. Commonly used for image data (e.g., pixel values between 0 and 255).                                                                                    |\n",
+        "| **Boolean**               | `torch.bool`      | Boolean type, stores `True` or `False` values. Often used for masks in logical operations.                                                                                      |\n",
+        "| **Complex 64**            | `torch.complex64` | Complex number type with 32-bit real and 32-bit imaginary parts. Used for scientific and signal processing tasks.                                                               |\n",
+        "| **Complex 128**           | `torch.complex128`| Complex number type with 64-bit real and 64-bit imaginary parts. Offers higher precision but uses more memory.                                                                 |\n",
+        "| **Quantized Integer**     | `torch.qint8`     | Quantized signed 8-bit integer. Used in quantized models for efficient inference.                                                                                              |\n",
+        "| **Quantized Unsigned Integer** | `torch.quint8` | Quantized unsigned 8-bit integer. Often used for quantized tensors in image-related tasks.                                                                                     |\n"
+      ],
+      "metadata": {
+        "id": "uh2ahCFLz2g5"
+      }
     }
   ]
 }
