mathops: add scalar operations

--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3CIh/5eAcE+iLub3LdKXv",
+      "authorship_tag": "ABX9TyPsDKmlf7b3iCjEFqT+NUBK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yXbJ7WKLK03T",
-        "outputId": "0fd7c07f-0c14-4819-9aff-460663c47320"
+        "outputId": "f486a8c5-b955-41d8-bf58-9bc4b1442386"
       },
       "outputs": [
         {
@@ -101,7 +101,7 @@
         "id": "CPxDrhKsNqig",
         "outputId": "9e5e73fc-5ccf-4028-edb3-c8f02ef480ac"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +129,7 @@
         },
         "outputId": "36b57010-2788-4a89-f306-b54f2e5600f0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +157,7 @@
         "id": "MPZ9IsWgoy4W",
         "outputId": "3ad32173-5199-4029-94c2-4cfda55ddae1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,7 +186,7 @@
         "id": "ceDKJyywo4sM",
         "outputId": "2ac8b6d5-f810-46e1-f6e6-f2d8c544ceed"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +216,7 @@
         "id": "3Yxd1zxDpmIM",
         "outputId": "19673ee8-7e93-4f2d-a2f2-af7081fd4d22"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -243,7 +243,7 @@
         "id": "UeaTsXv1qFmb",
         "outputId": "8de8b9d4-2e9b-4b2c-f8ec-721c25dfab64"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +271,7 @@
         "id": "OyfQJbxfqNEY",
         "outputId": "ff6a2cfa-1a5c-4cd0-de43-7c4f4e944d97"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,7 +299,7 @@
         "id": "fpnTIJMOqgxp",
         "outputId": "50eca222-8416-49c2-89db-27fc54271901"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -327,7 +327,7 @@
         "id": "I7jMmLJlqk-1",
         "outputId": "cc4e497e-d008-463b-fc1d-e434d6bb4ba7"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +358,7 @@
         "id": "0WwRrOQrrZwB",
         "outputId": "2ef882ab-94fc-40c0-fd05-d65b48e12c9c"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +395,7 @@
         "id": "vT55uYfzrfR0",
         "outputId": "780c0922-de72-46c5-981a-ad25153d4699"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +422,7 @@
         "id": "MvDIo0rcwtOU",
         "outputId": "0b117a3d-4bd2-4f5f-d0d8-fb66a8ba6183"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +449,7 @@
         "id": "XHkcYG6Mw6ML",
         "outputId": "48a2bac8-34e8-4580-8c8e-756f0324c870"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +476,7 @@
         "id": "0B_NO6iNxiTq",
         "outputId": "4a07c566-1a42-4691-b634-759613744ec0"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +503,7 @@
         "id": "_fJS-b83xkzo",
         "outputId": "445feda6-2d9d-41d8-9b8c-cab51d218ef6"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +534,7 @@
         "id": "VlpN5ZwLxnfo",
         "outputId": "5d40e2f9-ee6d-4d27-f396-da3d5c474678"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +571,7 @@
         "id": "zkFFK-zMy981",
         "outputId": "dbcb8f35-c44b-4f0d-d52b-c4f722c23e24"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +598,7 @@
         "id": "2-gqJB_6y_M9",
         "outputId": "92201dc2-9cfe-49d6-a3d2-c0629cad4f3c"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +624,7 @@
         "id": "oUTFEAz9zhv-",
         "outputId": "09a609af-d72a-4363-e40b-4a921bf72c56"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -651,7 +651,7 @@
         "id": "CGkvRWilzmj6",
         "outputId": "97d2772d-4b7d-458c-c51a-052d3052e6be"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,6 +690,257 @@
       "metadata": {
         "id": "uh2ahCFLz2g5"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mathematical operations"
+      ],
+      "metadata": {
+        "id": "zHzmfjT0pINX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1. Scalar operations"
+      ],
+      "metadata": {
+        "id": "GMtXlcS8pPUG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = torch.rand(2,2)\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KpJJ_lbopWgD",
+        "outputId": "d3fb74a4-6cd7-4905-f549-9989f9c2ae66"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.7391, 0.7968],\n",
+              "        [0.5519, 0.7815]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# addition\n",
+        "x + 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xwBXmTAKpt-Q",
+        "outputId": "f9aae4ac-cebc-41ad-ee05-148a457ca502"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[2.7391, 2.7968],\n",
+              "        [2.5519, 2.7815]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# subtraction\n",
+        "x - 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "47ZoJqJ6qZaN",
+        "outputId": "acedba8f-0b52-4211-ebb0-d34f37c22f33"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-1.2609, -1.2032],\n",
+              "        [-1.4481, -1.2185]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# multiplication\n",
+        "x * 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ab_YhRIFqcl7",
+        "outputId": "02319c25-03bc-487a-edc6-506b9f37e0de"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[2.2174, 2.3903],\n",
+              "        [1.6557, 2.3445]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# division\n",
+        "x / 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cr3EvF7Rqh4r",
+        "outputId": "0416090f-f232-4666-b4f5-b4f8e9d05633"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.2464, 0.2656],\n",
+              "        [0.1840, 0.2605]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# integer division\n",
+        "(x * 100) // 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7sLdwzGFqk2T",
+        "outputId": "050f072e-c937-45a2-fe46-6611a8c6faa1"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[24., 26.],\n",
+              "        [18., 26.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# mod: remainder\n",
+        "(x * 100) % 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kZWYTaivrbpm",
+        "outputId": "7f0c6c32-204b-4c5a-f90f-14375ac29f43"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.9129, 1.6776],\n",
+              "        [1.1911, 0.1504]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# power\n",
+        "x ** 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IIpFOpKur-ft",
+        "outputId": "02653ce7-89ab-4ab2-9756-424930e9f053"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5463, 0.6349],\n",
+              "        [0.3046, 0.6107]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KME7iL2EsdsD"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
